updated points of contact page

--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
+    <link rel="stylesheet" href="themes/accordion.css">
     <title>
         Proposal Preparation | University at Albany
     </title>
