Added video tutorials page

--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -126,6 +126,8 @@
                                 <a href="proposal-preparation.html">Proposal Preparation</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a href="library-resources.html">Library Resources</a></li>
+                            <li class="last-sub-navigation-item hover-highlight">
+                                <a href="video-resources.html">Video Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight" id = "active-page">
                                 <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
