--- a/proposal-preparation.html
+++ b/proposal-preparation.html
@@ -127,6 +127,8 @@
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a href="library-resources.html">Library Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
+                                <a href="video-resources.html">Video Resources</a></li>
+                            <li class="last-sub-navigation-item hover-highlight">
                                 <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a  href="ualbany-research-admin.html">Talk to your Research Administrator</a></li>
