--- a/video-resources.html
+++ b/video-resources.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
-    <link rel="stylesheet" href="themes/libraryresource.css">
+    <link rel="stylesheet" href="themes/accordion.css">
     <title>
         Library Resources | University at Albany
     </title>
@@ -124,9 +124,9 @@
                         <ul id = "sub-navigation-bar">
                             <li class="first-sub-navigation-item hover-highlight">
                                 <a href="proposal-preparation.html">Proposal Preparation</a></li>
-                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
-                                <a href="library-resources.html">Library Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
+                                <a href="library-resources.html">Library Resources</a></li>
+                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
                                 <a href="video-resources.html">Video Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
@@ -220,7 +220,7 @@
     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/loadlibraryresources.js"></script>
+    <script src="js/loadvideo-resources.js"></script>
 
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
