updated points of contact style

--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
     <link rel="stylesheet" href="themes/accordion.css">
+    <link rel="stylesheet" href="themes/points-of-contact.css">
     <title>
         Proposal Preparation | University at Albany
     </title>
