updated video resources page

--- a/video-resources.html
+++ b/video-resources.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
     <link rel="stylesheet" href="themes/accordion.css">
+    <link rel="stylesheet" href="themes/video-resources.css">
     <title>
         Library Resources | University at Albany
     </title>
