Added news menu item and hidden events, blog and resources menu items

--- a/faculty-home.html
+++ b/faculty-home.html
@@ -122,9 +122,10 @@
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="news.html">NEWS</a></li>
+                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li-->
+                    <!--li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li-->
+                    <!--li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
@@ -143,31 +144,31 @@
                     <div class = "col-xl-4 col-lg-6 col-md-12">
                         <a href = "fund-opportunities.html">
                         <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/funding.png">
+                            <img class = "home-logo" src = "assets/logos/homepage/funding.png">
                             <p>Funding Opportunities</p>
                         </div>
                         </a>
                     </div>
                     <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "faculty.html">
+                        <a href = "proposal-preparation.html">
                         <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/researcher.png">
-                            <p>Experts</p>
+                            <img class = "home-logo" src = "assets/logos/homepage/Toolbox.png">
+                            <p>Toolkit</p>
                         </div>               
                         </a>
                     </div>
                     <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "events.html">
+                        <a href = "faculty.html">
                         <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/join-a-seminar.png">
-                            <p>Join a Seminar</p>
+                            <img class = "home-logo" src = "assets/logos/homepage/find-an-opportunity-grey.png">
+                            <p>Experts</p>
                         </div>               
                         </a>
                     </div>
                     <div class = "col-xl-4 col-lg-6 col-md-12">
                         <a href = "ualbany-research-admin.html">
                         <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/Talk-to-Your-RA.png">
+                            <img class = "home-logo" src = "assets/logos/homepage/Talk-to-Your-RA-grey.png">
                             <p>Talk to Your RA</p>
                         </div>               
                         </a>
