--- a/fund-opportunities.html
+++ b/fund-opportunities.html
@@ -123,9 +123,10 @@
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="news.html">NEWS</a></li>
+                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
