--- a/news.html
+++ b/news.html
@@ -1,4 +1,4 @@
-.<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
-    <link rel="stylesheet" href ="themes/accordion.css">
-    <link rel="stylesheet" href ="themes/research-admin.css">
+    <link rel="stylesheet" href="themes/news.css" />
     <title>
-        Proposal Preparation | University at Albany
+        Home | University at Albany
     </title>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],   
@@ -48,7 +47,7 @@
                     </div>
                   </div>
               <div class="carousel-item">
-                <img src="assets/images/01-SPH.png" class="d-block w-100" alt="...">
+                <img src="assets/images/01-SPH.png" class=",-block w-100" alt="...">
                 <div id = "landing-page-text-wrapper">
                     <h1>UAlbany Research Funding Navigator</h1>
                     <p>Securing Extramural Funding to Foster Cutting Edge Research
@@ -114,53 +113,56 @@
                     <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png" style="width: 30px">
                 </a>
                     </button>
+                </div>
             </div>
-        </div>
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
-                    <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
-                    <li id="expanded-navigation-item"><a href="proposal-preparation.html">FUNDER TOOLKIT<i class="fas fa-chevron-down"></i></a>
-                        <ul id = "sub-navigation-bar">
-                            <li class="first-sub-navigation-item hover-highlight">
-                                <a href="proposal-preparation.html">Proposal Preparation</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="library-resources.html">Library Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="video-resources.html">Video Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
-                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
-                                <a  href="ualbany-research-admin.html">Talk to your Research Administrator</a></li>
-                        </ul>
-                    </li>
-                    <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="news.html">NEWS</a></li>
-                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
+                    <li class="navigation-items hover-highlight"><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" id = "active-page"><a href="news.html">NEWS</a></li>
+                    <!--li class="navigation-items hover-highlight"><a href="events.html">EVENTS</a></li-->
+                    <!--li class="navigation-items hover-highlight"><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
-                <h2 class="content-header">
-                    Meet Your Research Administrator
-                </h2>
-                <p> When preparing to submit an application to an external sponsor (<span style="text-decoration: underline;">NOT UAlbany Funding Opportunities</span>), 
-                    one of the first steps we recommend that you take, is to contact Sponsored Programs Administration 
-                    (SPA). The SPA Office has a seasoned team of Research Administrators (RA) who will assist you in 
-                    preparing, and submitting your application to the sponsor. This individual will assist students 
-                    in reviewing and adhering to sponsor, University, and Research Foundation guidelines and policies.  
-                </P>
-                <P> To find the research administrator that can best assist you, search for your department below or 
-                    contact our office at (518) 437-4550.  
-                </p>
-                <p class="spanblackbold">Search for Research Administrator by Department</p>
-                <input id = "search-box" placeholder = "Type department name"><button id = "search-button" type = "submit"><i class="fa fa-search"></i></button>
-                <br><span id = "search-box-results"></span>
-                <h3>Research Administrators</h3>   
+                <h1 class="content-header">
+                    NEWS
+                </h1>
+                <div class="news-post">
+                    <h2 class="news-title">UAlbany to lead $3.4M Environmental Sustainability Project</h2>
+                    <p class="news-image"><img src="assets/images/news/yanna-550px-new.jpg"></p>
+                    <p class="news-meta-data">Wed, 20 May 2020</p>
+                    <p class="news-content"> Every year, millions of tons of sewage sludge and food 
+                        waste are discarded in landfills where they cause serious environmental problems. 
+                        Now, the University at Albany is leading a consortium of universities to dramatically 
+                        alter the way this waste is handled. The goal is to develop economically viable 
+                        methods to convert wet organic waste into high value products.</p>
+                    <a class ="more" href="http://www.albany.edu/news/93910.php">more...</a>
+                </div>
+                <div class="news-post">
+                    <h2 class="news-title">CEHC Professors Featured During FEMA Higher Ed Symposium</h2>
+                    <p class="news-image"><img src="assets/images/news/Stern_550.jpg" alt=""></p>
+                    <p class="news-meta-data">Tue, 16 June 2020</p>
+                    <p class="news-content">Two professors in the College of Emergency Preparedness, 
+                        Homeland Security and Cybersecurity (CEHC) were recently featured on the 
+                        national stage during the Federal Emergency Management Agency’s (FEMA) 22nd 
+                        annual Higher Education Symposium.</p>
+                    <a class ="more" href="https://www.albany.edu/news/94011.php">more...</a>
+                </div>
+                <div class="news-post">
+                    <h2 class="news-title">Forensic Chemist’s Laser Technology Can Detect Crime Scene Smokers</h2>
+                    <p class="news-image"><img src="assets/images/news/Lednev_380(2).jpg" alt=""></p>
+                    <p class="news-meta-data">Wed, 27 May 2020</p>
+                    <p class="news-content">  Igor Lednev’s innovative laser-light technology is adding
+                        another use to its forensics toolbox – being able to determine if a smoker was at 
+                        the crime scene based on biological evidence.</p>
+                    <a class ="more" href="http://www.albany.edu/news/93930.php">more...</a>
+                </div>
             </div>
-        </div>
         </div>
     </section>
     <footer id="footer">
@@ -231,12 +233,8 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNRD5G" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/loadras.js"></script>
-    <script src="js/search-ras.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
 
