--- a/proposal-preparation.html
+++ b/proposal-preparation.html
@@ -135,9 +135,10 @@
                         </ul>
                     </li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="news.html">NEWS</a></li>
+                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
