modified accordion collapsing logic

--- a/faculty.html
+++ b/faculty.html
@@ -218,7 +218,7 @@
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
     <script src = "js/faculty.js" async></script>
     <script src = "js/search-box.js" async></script>
-    <script src = "js/accordion-faculty.js"></script>
+    <script src = "js/accordion.js"></script>
 </body>
 
 </html>
