updated funding opps page

--- a/fund-opportunities.html
+++ b/fund-opportunities.html
@@ -133,6 +133,27 @@
                     FUNDING OPPORTUNITIES
                 </h1>
                 <h3 class = "content-header-no-margin">
+                    Find Funding Opportunities​
+                </h3>
+                <div class ="display-flex">
+                    <div class = "grants-logo-container">               
+                        <a  target = "_blank" href = "https://www.grants.gov/web/grants/search-grants.html?keywords=Coronavirus">
+                            <div class = "image-container">
+                                <img id = "grants-logo"  src = "assets/logos/grants.png">
+                            </div>
+                        </a>
+                        <a  target = "_blank" href = "https://www.grants.gov/web/grants/search-grants.html?keywords=Coronavirus"><p class = "purple-font"><b>Click to view</b></p></a>
+                    </div>
+                    <div class = "grants-logo-container">
+                        <a target = "_blank" href = "https://spin.infoedglobal.com/Home/Search">
+                            <div class = "image-container">
+                                <img src = "assets/logos/external-spin.png">
+                            </div>
+                        </a>
+                        <a target = "_blank" href = "https://spin.infoedglobal.com/Home/Search"><p class = "purple-font"><b>Click to view</b></p></a>
+                    </div>
+                </div>
+                <h3 class = "content-header-no-margin">
                      NIH, NSF, GRANTS.GOV AND SUNY OPPORTUNITIES​
                 </h3>
                 <div class="display-flex">
@@ -151,15 +172,7 @@
                             </div>
                         </a>
                         <a target = "_blank" href = "https://grants.nih.gov/funding/searchguide/index.html#/"><p class = "purple-font"><b>Click to view</b></p></a>
-                    </div>
-                    <div class = "grants-logo-container">               
-                        <a  target = "_blank" href = "https://www.grants.gov/web/grants/search-grants.html?keywords=Coronavirus">
-                            <div class = "image-container">
-                                <img id = "grants-logo"  src = "assets/logos/grants.png">
-                            </div>
-                        </a>
-                        <a  target = "_blank" href = "https://www.grants.gov/web/grants/search-grants.html?keywords=Coronavirus"><p class = "purple-font"><b>Click to view</b></p></a>
-                    </div>
+                    </div>          
                     <div class = "grants-logo-container">
                         <a target = "_blank" href = "https://www.rfsuny.org/About-Us/COVID-19/COVID-19-Funding/">
                             <div class = "image-container">
@@ -167,14 +180,6 @@
                             </div>
                         </a>
                         <a target = "_blank" href = "https://www.rfsuny.org/About-Us/COVID-19/COVID-19-Funding/"><p class = "purple-font"><b>Click to view</b></p></a>
-                    </div>
-                    <div class = "grants-logo-container">
-                        <a target = "_blank" href = "https://spin.infoedglobal.com/Home/Search">
-                            <div class = "image-container">
-                                <img src = "assets/logos/external-spin.png">
-                            </div>
-                        </a>
-                        <a target = "_blank" href = "https://spin.infoedglobal.com/Home/Search"><p class = "purple-font"><b>Click to view</b></p></a>
                     </div>
                 </div>
             </div>
