updated points of contact accordion logic

--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -222,8 +222,8 @@
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/loadpointsofcontact.js"></script>
-
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
+    </script>
 </body>
 
 </html>
