--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -1,4 +1,4 @@
-.<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="themes/bootstrap/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="themes/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="themes/common.css" />
+    <link rel="stylesheet" href="themes/top-menu.css" />
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
@@ -28,14 +29,9 @@
 
 <body>
     <header id="navbar-header">
-        <div class="ualbany-logo-wrapper">
-            <span class="helper">
-            </span>
-            <a href="https://www.albany.edu/">
-                <img class="ualbany-logo" src="assets/logos/logo.png" />
-            </a>
-        </div>
     </header>
+    <div id="mega-menu">
+    </div>
     <div class = "landing-page-image-wrapper">
         <div class="carousel slide carousel-fade pointer-event" data-ride="carousel">
             <div class="carousel-inner">
@@ -233,6 +229,7 @@
     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/topmenu.js"></script>
     <script src="js/common.js"></script>
     <script src="js/loadras.js"></script>
     <script src="js/search-ras.js"></script>
