--- a/video-resources.html
+++ b/video-resources.html
@@ -104,13 +104,16 @@
     </div>
     <section class="content-wrapper">
         <div class="buffer">
-            <div class = "social-media-container">
-                <button><a href = "https://twitter.com/ResearchUAlbany">
+            <div class = "content-tool-bar">
+                <button id="social-media-button"><a target="_blank" href = "https://twitter.com/ResearchUAlbany">
                     @ResearchUAlbany
-                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png" style="width: 30px">
-                </a>
-                    </button>
-                </div>
+                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png"></a>
+                </button>
+                <button id = "message-button"><a class = "button-link" target="_blank" href = "files/Campus-Announces-Steps-to-Re-Open-Research.pdf">
+                    <div class="link-text"> Reopening<br>UAlbany Research</div> 
+                    <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
+                </button>
+            </div>
             </div>
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
