Added  loading gif to center

--- a/fund-opportunities.html
+++ b/fund-opportunities.html
@@ -197,13 +197,16 @@
                     type="submit"><i class="fa fa-search"></i></button>
                 <br><span id="search-box-results">
                     <div class="preload" style="position:absolute; width:100%; 
-                    height:100%;"><img style=" margin-left: auto;
-                margin-right: auto;
+                    height:100%; margin: 0 auto;"><img style=" 
+                    margin: 0 auto;
                 display: block;" src='assets/images/loader.gif'>
                     </div>
                 </span>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
     </section>
     <footer id="footer">
         <div id="footer-content" class = "display-flex">
