Updated Funding sponsor for sorting date

--- a/fund-opportunities.html
+++ b/fund-opportunities.html
@@ -191,7 +191,7 @@
                 </div>
 
                 <h3 class="content-header">
-                    SPECIFIC COVID-19 FUNDING OPPORTUNITIES <span id="totalnoofopps"></span> ​
+                    All FUNDING OPPORTUNITIES <span id="totalnoofopps"></span> ​
                 </h3>
                 <input id="search-box" placeholder="Search for funding opportunities"><button id="search-button"
                     type="submit"><i class="fa fa-search"></i></button>
