--- a/faculty-home.html
+++ b/faculty-home.html
@@ -262,6 +262,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNRD5G" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/topmenu.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
