Moved the ra page from funders tool kit to top level menu

--- a/news.html
+++ b/news.html
@@ -118,6 +118,7 @@
                     <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight"><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight"><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight"><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="news.html">NEWS</a></li>
                     <!--li class="navigation-items hover-highlight"><a href="events.html">EVENTS</a></li-->
                     <!--li class="navigation-items hover-highlight"><a href="blog.html">BLOG</a></li>
