--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -118,7 +118,7 @@
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
-                    <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li id="expanded-navigation-item"><a href="proposal-preparation.html">FUNDER TOOLKIT<i class="fas fa-chevron-down"></i></a>
                         <ul id = "sub-navigation-bar">
@@ -130,11 +130,10 @@
                                 <a href="video-resources.html">Video Resources</a></li>
                             <li class="last-sub-navigation-item hover-highlight">
                                 <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
-                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
-                                <a  href="ualbany-research-admin.html">Talk to your Research Administrator</a></li>
                         </ul>
                     </li>
-                    <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" id = "active-page"><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
