--- a/faculty-home.html
+++ b/faculty-home.html
@@ -102,35 +102,18 @@
         </div>
     </div>
     <section class="content-wrapper">
-       
-           <!--  <div class = "social-media-container">
-                <button><a href = "https://twitter.com/ResearchUAlbany">
+        <div class="buffer">
+            <div class = "content-tool-bar">
+                <button id="social-media-button"><a target="_blank" href = "https://twitter.com/ResearchUAlbany">
                     @ResearchUAlbany
-                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png" style="width: 30px">
-                </a>
-                    </button>
-                </div> -->
-
-                <div class="buffer">
-                    <div class = "content-tool-bar">
-                        <button id="social-media-button"><a target="_blank" href = "https://twitter.com/ResearchUAlbany">
-                            @ResearchUAlbany
-                            <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png"></a>
-                        </button>
-                        <button id = "message-button"><a class = "button-link" target="_blank" href = "files/Campus-Announces-Steps-to-Re-Open-Research.pdf">
-                            <div class="link-text"> Reopening<br>UAlbany Research</div> 
-                            <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
-                        </button>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-           
+                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png"></a>
+                </button>
+                <button id = "message-button"><a class = "button-link" target="_blank" href = "files/Campus-Announces-Steps-to-Re-Open-Research.pdf">
+                    <div class="link-text"> Reopening<br>UAlbany Research</div> 
+                    <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
+                </button>
+            </div>
+        </div>
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
@@ -138,6 +121,7 @@
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li-->
                     <!--li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li-->
                     <!--li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
