--- a/faculty.html
+++ b/faculty.html
@@ -122,6 +122,7 @@
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTIONS</a></li>
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
