--- a/fund-opportunities.html
+++ b/fund-opportunities.html
@@ -132,6 +132,8 @@
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTIONS</a></li>
+
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
@@ -279,6 +281,7 @@
 <!--     <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
  -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    
 
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/topmenu.js"></script>
