--- a/proposal-preparation.html
+++ b/proposal-preparation.html
@@ -134,6 +134,8 @@
                         </ul>
                     </li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTIONS</a></li>
+
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
