--- a/questions.html
+++ b/questions.html
@@ -102,92 +102,32 @@
         </div>
     </div>
     <section class="content-wrapper">
-       
-           <!--  <div class = "social-media-container">
-                <button><a href = "https://twitter.com/ResearchUAlbany">
+        <div class="buffer">
+            <div class = "content-tool-bar">
+                <button id="social-media-button"><a target="_blank" href = "https://twitter.com/ResearchUAlbany">
                     @ResearchUAlbany
-                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png" style="width: 30px">
-                </a>
-                    </button>
-                </div> -->
-
-                <div class="buffer">
-                    <div class = "content-tool-bar">
-                        <button id="social-media-button"><a target="_blank" href = "https://twitter.com/ResearchUAlbany">
-                            @ResearchUAlbany
-                            <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png"></a>
-                        </button>
-                        <button id = "message-button"><a class = "button-link" target="_blank" href = "files/Campus-Announces-Steps-to-Re-Open-Research.pdf">
-                            <div class="link-text"> Reopening<br>UAlbany Research</div> 
-                            <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
-                        </button>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-           
+                    <img src="http://pngimg.com/uploads/twitter/twitter_PNG3.png"></a>
+                </button>
+                <button id = "message-button"><a class = "button-link" target="_blank" href = "files/Campus-Announces-Steps-to-Re-Open-Research.pdf">
+                    <div class="link-text"> Reopening<br>UAlbany Research</div> 
+                    <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
+                </button>
+            </div>
+            </div>
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
-                    <li class="navigation-items hover-highlight" id = "active-page"><a href="faculty-home.html">HOME</a></li>
+                    <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTIONS</a></li>
-
-                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li-->
-                    <!--li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li-->
-                    <!--li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
                 <h1 class="content-header">
-                    WELCOME TO THE UALBANY FACULTY FUNDING NAVIGATOR
+                    Questions
                 </h1>
-                <p>
-                    The UAlbany Faculty Funding Navigator is a web-based platform that provides faculty scholars and 
-                    researchers with a wide range of funding opportunities, tutorials, sample applications, library resources, 
-                    research experts/collaborators, and much more with the goal of enhancing competitiveness in the pursuit of extramural funding. ​
-                </p>
-                <div class = "display-flex">
-                    <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "fund-opportunities.html">
-                        <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/homepage/funding.png">
-                            <p>Funding Opportunities</p>
-                        </div>
-                        </a>
-                    </div>
-                    <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "proposal-preparation.html">
-                        <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/homepage/Toolbox.png">
-                            <p>Toolkit</p>
-                        </div>               
-                        </a>
-                    </div>
-                    <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "faculty.html">
-                        <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/homepage/find-an-opportunity-grey.png">
-                            <p>Experts</p>
-                        </div>               
-                        </a>
-                    </div>
-                    <div class = "col-xl-4 col-lg-6 col-md-12">
-                        <a href = "ualbany-research-admin.html">
-                        <div class = "home-logo-container">
-                            <img class = "home-logo" src = "assets/logos/homepage/Talk-to-Your-RA-grey.png">
-                            <p>Talk to Your RA</p>
-                        </div>               
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
         </div>
@@ -260,12 +200,11 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNRD5G" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src= "libraries/jquery/jquery-3.3.1.slim.js"></script>
+    <script src="libraries/jquery/jquery-3.3.1.slim.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/topmenu.js"></script>
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
-
 </html>
