--- a/questions.html
+++ b/questions.html
@@ -15,10 +15,9 @@
     <link rel="stylesheet" href="themes/side-navigation.css" />
     <link rel="stylesheet" href="themes/custom-fonts.css" />
     <link rel="stylesheet" href="themes/footer.css" />
-    <link rel="stylesheet" href="themes/accordion.css">
-    <link rel="stylesheet" href="themes/video-resources.css">
+    <link rel="stylesheet" href="themes/home.css" />
     <title>
-        Library Resources | University at Albany
+        Home | University at Albany
     </title>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],   
@@ -114,38 +113,63 @@
                     <div class="link-img"><img src="assets/images/Open-Doors.png"></div></a>
                 </button>
             </div>
-            </div>
+        </div>
         <div class="display-flex">
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3">
                 <ul id="navigation-bar">
-                    <li class="navigation-items hover-highlight" ><a href="faculty-home.html">HOME</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
-                    <li id="expanded-navigation-item"><a href="proposal-preparation.html">FUNDER TOOLKIT<i class="fas fa-chevron-down"></i></a>
-                        <ul id = "sub-navigation-bar">
-                            <li class="first-sub-navigation-item hover-highlight">
-                                <a href="proposal-preparation.html">Proposal Preparation</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="library-resources.html">Library Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight" id = "active-page">
-                                <a href="video-resources.html">Video Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
-                        </ul>
-                    </li>
-                    <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
-                    <li class="navigation-items hover-highlight"><a href="questions.html">QUESTION</a></li>
-                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
+                    <li class="navigation-items hover-highlight"><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
+                    <li class="navigation-items hover-highlight"><a href="faculty.html">EXPERTS PAGE</a></li>
+                    <li class="navigation-items hover-highlight"><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
+                    <li class="navigation-items hover-highlight" id = "active-page"><a href="questions.html">QUESTION</a></li>
+                    <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li-->
+                    <!--li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li-->
+                    <!--li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
                 <h1 class="content-header">
-                    Library Resources
+                    HAVE A QUESTION?
                 </h1>
-                <p id = "last-updated"></p>
-             </div>
+                <p>If you should have a question regarding research, grants development, and/or 
+                    sponsored programs, please email  research@albany.edu. ​
+                </p>
+                <div class = "display-flex">
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "fund-opportunities.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/homepage/funding.png">
+                            <p>Funding Opportunities</p>
+                        </div>
+                        </a>
+                    </div>
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "proposal-preparation.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/homepage/Toolbox.png">
+                            <p>Toolkit</p>
+                        </div>               
+                        </a>
+                    </div>
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "faculty.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/homepage/find-an-opportunity.png">
+                            <p>Experts</p>
+                        </div>               
+                        </a>
+                    </div>
+                    <div class = "col-xl-4 col-lg-6 col-md-12">
+                        <a href = "ualbany-research-admin.html">
+                        <div class = "home-logo-container">
+                            <img class = "home-logo" src = "assets/logos/homepage/Talk-to-Your-RA.png">
+                            <p>Talk to Your RA</p>
+                        </div>               
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
     </section>
@@ -222,9 +246,6 @@
 
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/topmenu.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/loadvideo-resources.js"></script>
-
     <script> $('.carousel').carousel({interval: 3000, pause: false})</script>
 </body>
 
