--- a/events.html
+++ b/events.html
@@ -122,6 +122,7 @@
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li>
+                    <li class="navigation-items hover-highlight"><a href="questions.html">QUESTION</a></li>
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
