--- a/news.html
+++ b/news.html
@@ -120,6 +120,7 @@
                     <li class="navigation-items hover-highlight"><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight"><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="news.html">NEWS</a></li>
+                    <li class="navigation-items hover-highlight"><a href="questions.html">QUESTION</a></li>
                     <!--li class="navigation-items hover-highlight"><a href="events.html">EVENTS</a></li-->
                     <!--li class="navigation-items hover-highlight"><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
