--- a/point-of-contacts.html
+++ b/point-of-contacts.html
@@ -134,6 +134,7 @@
                     </li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight" ><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
+                    <li class="navigation-items hover-highlight"><a href="questions.html">QUESTION</a></li>
                     <!--li class="navigation-items hover-highlight" ><a href="events.html">EVENTS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="blog.html">BLOG</a></li>
                     <li class="navigation-items hover-highlight" ><a href="#">RESOURCES</a></li-->
