updated the side menu with Question tab

--- a/questions.html
+++ b/questions.html
@@ -121,15 +121,18 @@
                     <li class="navigation-items hover-highlight" ><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
                     <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
-                    <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTIONS</a></li>
                     <li class="navigation-items hover-highlight" ><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
-
+                    <li class="navigation-items hover-highlight" ><a href="questions.html">QUESTION</a></li>
                 </ul>
             </div>
             <div class="main-content col-sm-12 col-md-7 col-lg-8 col-xl-9">
                 <h1 class="content-header">
-                    Questions
+                    HAVE A QUESTION?
                 </h1>
+                <p>
+                    If you should have a question regarding research, grants development, 
+                    and/or sponsored programs, please email <a href="mailto:research@albany.edu">research@albany.edu</a>.
+                </p>
             </div>
         </div>
         </div>
