--- a/ualbany-research-admin.html
+++ b/ualbany-research-admin.html
@@ -120,18 +120,7 @@
                 <ul id="navigation-bar">
                     <li class="navigation-items hover-highlight"><a href="faculty-home.html">HOME</a></li>
                     <li class="navigation-items hover-highlight"><a href="fund-opportunities.html">FUNDING OPPORTUNITIES</a></li>
-                    <li id="expanded-navigation-item"><a href="proposal-preparation.html">FUNDER TOOLKIT<i class="fas fa-chevron-down"></i></a>
-                        <ul id = "sub-navigation-bar">
-                            <li class="first-sub-navigation-item hover-highlight">
-                                <a href="proposal-preparation.html">Proposal Preparation</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="library-resources.html">Library Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a href="video-resources.html">Video Resources</a></li>
-                            <li class="last-sub-navigation-item hover-highlight">
-                                <a  href="point-of-contacts.html">Talk to a Program Officer</a></li>
-                        </ul>
-                    </li>
+                    <li class="navigation-items hover-highlight" ><a href="proposal-preparation.html">FUNDER TOOLKIT</a></li>
                     <li class="navigation-items hover-highlight" ><a href="faculty.html">EXPERTS PAGE</a></li>
                     <li class="navigation-items hover-highlight" id = "active-page"><a href="ualbany-research-admin.html">FIND YOUR RA</a></li>
                     <li class="navigation-items hover-highlight"><a href="questions.html">QUESTION</a></li>
